<resources>
    <string name="app_name">My Profile</string>

    <!--    All   -->
    <string name="all_username">User name</string>
    <string name="all_career">Career</string>
    <string name="all_home_address">Home address</string>
    <!--    Main activity   -->
    <string name="main_settings">Settings</string>
    <string name="main_settings_description">Go to settings and fill out the profile</string>
    <string name="main_edit_profile">Edit profile</string>
    <string name="main_view_my_contacts">View my contacts</string>
    <!--    Auth activity   -->
    <string name="auth_acquaint">Let\'s get acquainted</string>
    <string name="auth_fill_out_description">Fill out the profile and go to the application!</string>
    <string name="auth_email">E-mail</string>
    <string name="auth_password">Password</string>
    <string name="auth_remember_me">Remember me</string>
    <string name="auth_google_sign_in">google</string>
    <string name="auth_or">or</string>
    <string name="auth_register">register</string>
    <string name="auth_terms_and_conditions">By clicking Register you agree to our Terms\nand Conditions</string>
    <string name="auth_already_have_account">Already have an account?</string>
    <string name="auth_sign_in">Sign in</string>
    <string name="authMessageEmailError">Incorrect E-Mail address</string>
    <string name="authMessagePasswordError">Your password must include minimum of 8 characters.</string>
    <!--    ContactsList activity   -->
    <string name="contacts_contacts">Contacts</string>
    <string name="contacts_add_contacts">Add contacts</string>
    <string name="contacts_delete_description">Delete selected contacts</string>
    <!--    Add contacts   -->
    <string name="add">Add</string>
    <string name="add_contact_users">Users</string>
    <string name="add_contact_add_contact">Add contact</string>
    <string name="add_contact_address">Address</string>
    <string name="add_contact_email">Email</string>
    <string name="add_contact_email_sample">name@gmail.com</string>
    <string name="add_contact_phone">Phone</string>
    <string name="add_contact_phone_sample">(264)-654-3762</string>
    <string name="add_contacts_username">Username</string>
    <string name="add_contact_date_of_birth">Date of birth</string>
    <string name="add_contact_date_of_birth_sample">01/01/1900</string>
    <string name="add_contact_button_save">save</string>
    <string name="add_contact_permission_needed">Permission to access the Gallery needed</string>
    <string name="add_contact_permission_needed_title">Permission needed:</string>
    <string name="add_contact_permission_needed_message">To open the Gallery the app needed your permission</string>
    <string name="add_contact_allow">Allow</string>
    <string name="add_contact_cancel">Cancel</string>
    <!--    Contact detail view   -->
    <string name="contact_detail_view_profile">Profile</string>
    <string name="contact_detail_view_message">message</string>
    <!--   Login   -->
    <string name="login_hello">Hello!</string>
    <string name="login_description">Enter your email and password below</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="login_login">login</string>
    <string name="login_do_not_have_account">Don’t have account?</string>
    <string name="login_sign_up">Sign up</string>
    <!--    SignUp    -->
    <string name="sing_up_your_profile_data">Your profile data</string>
    <string name="sign_up_mobile_phone">Mobile phone</string>
    <string name="cancel">Cancel</string>
    <string name="forward">Forward</string>
</resources>
