<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ParentLayoutMarginStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authorization.AuthorizationFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineLoginHorizontal0.23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewLoginHello"
        style="@style/TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideLineLoginHorizontal0.23" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewLoginFillOutDescription"
        style="@style/DescriptionStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoginHello" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutLoginEmail"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/auth_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoginFillOutDescription">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextLoginEmailAddressField"
            style="@style/EditTextFieldStyle.Auth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutLoginPassword"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/auth_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutLoginEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextLoginPasswordField"
            style="@style/EditTextFieldStyle.Auth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkBoxLoginRememberMe"
        style="@style/AuthCheckBoxStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_remember_me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutLoginPassword" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forgot_password"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxLoginRememberMe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkBoxLoginRememberMe" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        style="@style/BorderOrangeButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_login"
        app:layout_constraintBottom_toTopOf="@id/textViewLoginHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewLoginHaveAccount"
        style="@style/LightGrayText.HaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_do_not_have_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textViewLoginSignUp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewLoginSignUp"
        style="@style/SignIn_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewLoginHaveAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>