<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_16">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutAddContactHeader"
            style="@style/AddContactHeaderLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/buttonAddContactBack"
                style="@style/ImageButtonBackStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewAddContact"
                style="@style/AddContactTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/buttonAddContactBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/buttonAddContactBack" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewAddContactFragmentContactPhoto"
                android:layout_width="@dimen/profile_photo_size_113"
                android:layout_height="@dimen/profile_photo_size_113"
                android:layout_marginTop="@dimen/margin_28"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewAddContact"
                tools:src="@drawable/ic_default_profile_photo" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/buttonAddContactFragmentAddPhoto"
                style="@style/ImageButtonAddPhotoStyle"
                android:layout_width="@dimen/button_add_photo_size_55"
                android:layout_height="@dimen/button_add_photo_size_55"
                android:elevation="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewAddContactFragmentContactPhoto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewAddContactFragmentContactPhoto"
                app:layout_constraintTop_toTopOf="@+id/imageViewAddContactFragmentContactPhoto" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutAddContactsFragmentUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayoutStyle.FragmentMargin"
            android:hint="@string/all_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutAddContactHeader">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextAddContactsFragmentUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextFieldStyle.DarkText"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutAddContactsFragmentCareer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayoutStyle.FragmentMargin"
            android:hint="@string/all_career"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAddContactsFragmentUsername">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextAddContactsFragmentCareer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextFieldStyle.DarkText"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutAddContactsFragmentEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayoutStyle.FragmentMargin"
            android:hint="@string/add_contact_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAddContactsFragmentCareer"
            app:placeholderText="@string/add_contact_email_sample">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextAddContactsFragmentEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextFieldStyle.DarkText"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutAddContactsFragmentPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayoutStyle.FragmentMargin"
            android:hint="@string/add_contact_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAddContactsFragmentEmail"
            app:placeholderText="@string/add_contact_phone_sample">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextAddContactsFragmentPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextFieldStyle.DarkText"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutAddContactsFragmentAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayoutStyle.FragmentMargin"
            android:hint="@string/add_contact_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAddContactsFragmentPhone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextAddContactsFragmentAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextFieldStyle.DarkText"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutAddContactsFragmentBirthDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayoutStyle.FragmentMargin"
            android:hint="@string/add_contact_date_of_birth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAddContactsFragmentAddress"
            app:placeholderText="@string/add_contact_date_of_birth_sample">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextAddContactsFragmentBirthDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextFieldStyle.DarkText"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAddContactSave"
            style="@style/OrangeButtonStyle.Save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutAddContactsFragmentBirthDay" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>